--- a/src/css/override.css
+++ b/src/css/override.css
@@ -1,3 +1,16 @@
 .menu:active {
     color:#282d88;
 }
+
+
+/* Stats.tsx */
+.stats{
+    height: 300px;
+    gap: 24rem;
+}
+.stat{
+    height: 100%;
+    width: 100%;
+}
+
+/* */
